--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ header {
   height: 20rem;
   text-align: center;
   border-top-right-radius: 3rem;
-  outline: 0.3rem dashed #752929;
+  outline: 0.3rem outset #752929;
   margin-left: 0.3rem;
 }
 .profl__img {
@@ -85,7 +85,8 @@ header {
 
   background: #b56d6d56;
   border-left: 0.3rem solid #f5e9e9;
-  border-right: 1rem solid #752929;
+  border-bottom: 0.2rem solid #752929;
+  border-right: 0.6rem groove #675b5b;
   justify-content: center;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
