--- a/main.scss
+++ b/main.scss
@@ -65,6 +65,11 @@ header {
       top-left-radius: 3rem;
       bottom-left-radius: 3rem;
     }
+    --webkit-border: {
+      left: 0.3rem dashed $beige;
+      top-left-radius: 3rem;
+      bottom-left-radius: 3rem;
+    }
 
     outline: 0.3rem outset $dark_brown;
     margin-left: 0.3rem;
