--- a/style.css
+++ b/style.css
@@ -43,12 +43,10 @@ header {
   border-left: 0.3rem dashed #f5e9e9;
   border-top-left-radius: 3rem;
   border-bottom-left-radius: 3rem;
-  --webkit-border: {
-    left: 0.3rem dashed $beige;
-    top-left-radius: 3rem;
-    bottom-left-radius: 3rem;
-  }
-  outline: 0.3rem outset $dark_brown;
+  --webkit-border-left: left: 0.3rem dashed $beige;
+  --webkit-border-radius: 3rem;
+  --webkit-border-bottom-left-radius: 3rem;
+  outline: 0.3rem outset #752929;
   margin-left: 0.3rem;
   transition: 1s ease-out;
 }
@@ -63,6 +61,20 @@ header {
   height: 23rem;
   cursor: pointer;
   border-left: 0.3rem dashed #b56d6d;
+}
+.profl--left__figure {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0.4rem 0 0 0;
+}
+.profl--left__figure img {
+  width: 3rem;
+  height: 3rem;
+}
+.profl--left__figure img:hover {
+  border: 0.1rem solid #f5e9e9;
+  width: 4rem;
+  height: 4rem;
 }
 .profl .h--name {
   color: #ffffff;
