--- a/main.scss
+++ b/main.scss
@@ -68,7 +68,7 @@ header {
     --webkit-border-left: left: 0.3rem dashed $beige;
     --webkit-border-radius: 3rem;
     --webkit-border-bottom-left-radius: 3rem;
-
+--webkit-outline: 0.3rem outset $dark_brown
     outline: 0.3rem outset $dark_brown;
     margin-left: 0.3rem;
 
