--- a/style.css
+++ b/style.css
@@ -43,11 +43,10 @@ header {
   border-left: 0.3rem dashed #f5e9e9;
   border-top-left-radius: 3rem;
   border-bottom-left-radius: 3rem;
-  --webkit-border-left: left: 0.3rem dashed $beige;
-  --webkit-border-radius: 3rem;
-  --webkit-border-bottom-left-radius: 3rem;
-  --webkit-outline: 0.3rem outset $dark_brown
-      outline: 0.3rem outset $dark_brown;
+  -webkit-border-left: 0.3rem dashed #f5e9e9;
+  -webkit-border-top-left-radius: 3rem;
+  -webkit-border-bottom-left-radius: 3rem;
+  outline: 0.3rem outset #752929;
   margin-left: 0.3rem;
   transition: 1s ease-out;
 }
