--- a/main.scss
+++ b/main.scss
@@ -69,7 +69,7 @@ header {
     -webkit-border-top-left-radius: 3rem;
     -webkit-border-bottom-left-radius: 3rem;
 
-    outline: 0.3rem outset $dark_brown;
+    outline: 0.3rem auto $dark_brown;
     margin-left: 0.3rem;
 
     transition: 1s ease-out;
