--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
   -webkit-border-left: 0.3rem dashed #f5e9e9;
   -webkit-border-top-left-radius: 3rem;
   -webkit-border-bottom-left-radius: 3rem;
-  outline: 0.3rem outset #752929;
+  outline: 0.3rem auto #752929;
   margin-left: 0.3rem;
   transition: 1s ease-out;
 }
