--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ header {
   width: 16rem;
 }
 
-.num-of-projects {
+.stdes__num-of-projects {
   font-family: "Luckiest Guy", cursive;
   color: rgb(163, 22, 22);
 }
@@ -171,57 +171,43 @@ main {
 }
 
 /* */
-.body-1-t-d,
-.body-2-t-d,
-.body-3-t-d,
-.body-4 {
-  background: white;
-  padding: 1rem 2rem;
-  margin-bottom: 2rem;
-  border-radius: 2rem;
-  box-shadow: 0 0 0.5rem rgb(135, 128, 128);
+.section--header {
+  padding-top: 1.4rem;
+  border-top: 0.01rem solid black;
 }
 
-.body-2-2-t-d {
-  font-family: "Karla", sans-serif;
-}
-
-.body-2-2-t-d li {
+.cprof--list li {
   padding-bottom: 0.3rem;
   list-style: circle;
 }
-.body-2-2-t-d li::marker {
+.cprof--list li::marker {
   color: rgb(109, 16, 109);
 }
-
-.body-2-2-t-d li a {
+.cprof--list li a {
   font-weight: 700;
   text-decoration: none;
 }
-.body-2-2-t-d li a:hover {
+.cprof--list li a:hover {
   border: 0.1rem solid rgb(109, 16, 109);
 }
 
-.body-2-1,
-.body-3-1 {
-  margin-top: 0.4rem;
-}
-
-.body-3-2 {
+.fav--grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  flex-direction: row;
-  justify-content: space-evenly;
+  gap: 2rem;
+  padding: 1rem;
+  border: 0.2rem dashed black;
+  border-radius: 1rem;
+  justify-content: center;
 }
-
-.body-3-2 a img {
+.fav--grid a img {
   object-fit: cover;
   width: 6rem;
   height: 6rem;
   border-radius: 1rem;
   transition: all 2s ease-out;
 }
-.body-3-2 a img:hover {
+.fav--grid a img:hover {
   border: 0.1rem solid black;
   transform: scale(2);
 }
