--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ header {
   -webkit-border-left: 0.3rem dashed #f5e9e9;
   -webkit-border-top-left-radius: 3rem;
   -webkit-border-bottom-left-radius: 3rem;
-  outline: 0.3rem auto #752929;
+  outline: 0.3rem auto;
+  outline-color: #752929 !important;
   margin-left: 0.3rem;
   transition: 1s ease-out;
 }
@@ -170,7 +171,6 @@ main {
   font-size: 2rem;
 }
 
-/* */
 .section--header {
   padding-top: 1.4rem;
   border-top: 0.01rem solid black;
