--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ body {
   align-items: center;
 }
 
+a:link {
+  color: rgb(109, 16, 109);
+}
+a:active {
+  color: #752929;
+}
+
 main {
   width: 40rem;
   margin-bottom: 2rem;
@@ -46,8 +53,7 @@ header {
   -webkit-border-left: 0.3rem dashed #f5e9e9;
   -webkit-border-top-left-radius: 3rem;
   -webkit-border-bottom-left-radius: 3rem;
-  outline: 0.3rem auto;
-  outline-color: #752929 !important;
+  box-shadow: 0 0 0 0.1rem #752929;
   margin-left: 0.3rem;
   transition: 1s ease-out;
 }
@@ -196,9 +202,14 @@ main {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   gap: 2rem;
   padding: 1rem;
+  justify-content: center;
+}
+.fav--grid-and-details {
   border: 0.2rem dashed black;
   border-radius: 1rem;
-  justify-content: center;
+}
+.fav--grid-and-details h4 {
+  text-align: center;
 }
 .fav--grid a img {
   object-fit: cover;
@@ -212,6 +223,16 @@ main {
   transform: scale(2);
 }
 
+.details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+.details > * {
+  width: 35rem;
+}
+
 /* responsive design */
 @media only screen and (max-width: 700px) {
   html {
@@ -221,11 +242,6 @@ main {
 @media only screen and (max-width: 550px) {
   html {
     font-size: 10px;
-  }
-}
-@media only screen and (max-width: 430px) {
-  html {
-    font-size: 8px;
   }
 }
 
