--- a/main.scss
+++ b/main.scss
@@ -1,20 +1,4 @@
-//colors
-
-$beige: #f5e9e9;
-$light_green: #e9f5ec;
-$brown: #b56d6d;
-$dark_green: #53a068;
-$dark_brown: #752929;
-$grey: #989898;
-$blue: rgb(51, 51, 242);
-
-$yellow: rgb(134, 134, 32);
-
-//fonts
-
-$karla: "Karla", sans-serif;
-$luckiest_guy: "Luckiest Guy", cursive;
-$marck_script: "Marck Script", cursive;
+@import "variables.scss";
 
 html {
   font: {
@@ -34,7 +18,7 @@ body {
 }
 a {
   &:link {
-    color: rgb(109, 16, 109);
+    color: $purple;
   }
   &:active {
     color: $dark_brown;
@@ -273,16 +257,6 @@ main {
         transform: scale(2);
       }
     }
-  }
-}
-
-.details {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  > * {
-    width: 35rem;
   }
 }
 
