--- a/details.css
+++ b/details.css
@@ -35,7 +35,7 @@ a:hover li {
   align-items: center;
 }
 .details > * {
-  max-width: 35rem;
+  width: 35rem;
 }
 .details--links {
   padding-bottom: 0.1rem;
@@ -44,6 +44,9 @@ a:hover li {
 @media only screen and (max-width: 600px) {
   h2 {
     text-align: center;
+  }
+  .details > * {
+    max-width: 35rem;
   }
 }
 
