--- a/details.scss
+++ b/details.scss
@@ -38,7 +38,7 @@ a {
   justify-content: flex-start;
   align-items: center;
   > * {
-    max-width: 35rem;
+    width: 35rem;
   }
 
   &--links {
@@ -49,5 +49,9 @@ a {
 @media only screen and (max-width: 600px) {
   h2 {
     text-align: center;
+  }
+
+  .details > * {
+    max-width: 35rem;
   }
 }
