--- a/main.scss
+++ b/main.scss
@@ -49,7 +49,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 18rem; /*45% */
+    width: auto; /*45% */
     height: 20rem;
     text-align: center;
     border: {
@@ -295,5 +295,19 @@ main {
 @media only screen and (max-width: 550px) {
   html {
     font-size: 10px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  html {
+    font-size: 9px;
+  }
+
+  body {
+    section {
+      margin: 0rem 1rem;
+    }
+  }
+  .fav--grid {
+    gap: 1rem;
   }
 }
