--- a/main.scss
+++ b/main.scss
@@ -1,6 +1,8 @@
 @import "variables.scss";
 
 //sass --watch main.scss style.css
+
+// git add . && git commit -m "update" && git push 
 html {
   font: {
     family: $karla;
@@ -49,7 +51,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: auto; /*45% */
+    width: 18rem;
     height: 20rem;
     text-align: center;
     border: {
@@ -75,6 +77,7 @@ header {
       background: lighten($brown, 10%);
       width: 20rem;
       height: 23rem;
+
       cursor: pointer;
       border-left: 0.3rem dashed $brown;
     }
@@ -306,6 +309,10 @@ main {
     section {
       margin: 0rem 1rem;
     }
+  }
+  .profl--left {
+    width: 14rem;
+    margin: 0;
   }
   .fav--grid {
     gap: 1rem;
