--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: auto; /*45% */
+  width: 18rem;
   height: 20rem;
   text-align: center;
   border-left: 0.3rem dashed #f5e9e9;
@@ -258,6 +258,10 @@ main {
   }
   body section {
     margin: 0rem 1rem;
+  }
+  .profl--left {
+    width: 14rem;
+    margin: 0;
   }
   .fav--grid {
     gap: 1rem;
